--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,6 +1,8 @@
-<footer>
-    <div class="f-info">
-        <div class="f-info-social">
+
+
+<footer >
+    <div class="f-info mt-auto">
+        <div class="f-info-social ">
          <i class="fa-brands fa-x-twitter"></i>
          <i class="fa-brands fa-instagram"></i>
          <i class="fa-brands fa-linkedin"></i>
