--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,43 +1,111 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>  we are removing this and html tag at end of code bcoz boiler plate ke css wale effects lgane hai qki hmne style.css ki file ko boilerplate.ejs se link kr diya and biolerplate.ejs file ke effects yaha lg rhe hai -->
+  
 <% layout ("/layouts/boilerplate") %>
-<!-- isse boiler plate.ejs wali file jo ki css file se link hai wo effets css ke lgenge also agr boilerplate ki file mein content likha hoga wo bhi show hoga on all pages 
-</head>
-<html> -->
 <body>
-     <% for (let listing of alllisting) { %>
-    <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
-  </div> 
-</div>     <% } %> 
+    <div class="filterss">
+    <a href="/listings?category=Trending" class="filter-link">
+       <div class="filter ms-4">
+        <div><i class="fa-solid fa-fire"></i></div>
+        <p>Trending </p>
+       </div>
+        </a>
+    <a href="/listings?category=Rooms" class="filter-link">
+       <div class="filter ms-4">
+        <div><i class="fa-solid fa-bed"></i></div>
+        <p>Rooms</p>
+       </div>
+        </a>
+    <a href="/listings?category=Amazing Views" class="filter-link">
+       <div class="filter ms-4">
+        <div><i class="fa-solid fa-mountain-sun"></i></div>
+        <p>Amazing Views</p>
+       </div>       
+        </a>
+    <a href="/listings?category=Iconic cities" class="filter-link">
+       <div class="filter ms-4">
+        <div><i class="fa-solid fa-mountain-city"></i></div>
+        <p>Iconic cities</p>
+       </div>
+        </a>
+    <a href="/listings?category=Surfing" class="filter-link">
+       <div class="filter ms-4">
+        <div><i class="fa-solid fa-football"></i></div>
+        <p>Surfing</p>
+       </div>
+        </a>
+    <a href="/listings?category=Amazing Pools" class="filter-link">
+       <div class="filter ms-4">
+        <div><i class="fa-solid fa-person-swimming"></i></div>
+        <p>Amazing Pools</p>
+       </div> 
+             </a>
+    <a href="/listings?category=Beach" class="filter-link">
+       <div class="filter ms-4">
+        <div><i class="fa-solid fa-umbrella-beach"></i></div>
+        <p>Beach</p>
+       </div>
+        </a>
+    <a href="/listings?category=Cabins" class="filter-link">
+       <div class="filter ms-4">
+        <div><i class="fa-solid fa-chalkboard"></i></div>
+        <p>Cabins</p>
+       </div>
+        </a>
+    <a href="/listings?category=Lake front" class="filter-link">
+       <div class="filter ms-4">
+        <div><i class="fa-solid fa-water"></i></div>
+        <p>Lake front</p>
+       </div>   
+        </a>
 
-    <!-- <a href="/listings/new"><button>create new list</button></a> -->
-    <!-- we can both either this ^ or this button as following form mein hmesha pehle get request likhna then path route nhi to err aayega new _id ka -->
-        <!-- <form method="GET" action="/listings/new" ><button>create new listing</button></form> commented thi button bcoz we are added nav bar using bootsrap-->
-    <!-- alllisting.title krne se lista nhi aayenge uske liye ek for loop lgana pdta hai -->
-   
-
-</ul>
-    <% for (let listing of alllisting) { %>
-        <!-- <li><=listing.title></li> isse apneko sare title browser pr mil jayenge -->
-        <!-- ab in title ko link ke form mein layenge taki jis bhi title pr click kro to us ka data show kre  -->
-         <!-- so jis title pr click kiya us title ke data ki id hme milegi hm shoe route create kr denge uske liye -->
-          <li><a href="/listings/<%=listing._id%>"><%=listing.title%></a></li>
-     
+    <a href="/listings?category=Pool" class="filter-link">
+       <div class="filter ms-4">
+        <div><i class="fa-solid fa-snowflake"></i></div>
+        <p>Pool</p>
+       </div> </a>
         
-    <% } %> <ul>
-    <ul> <% let listing = alllisting %>
-        <!-- listing is an object and descriptin is a property we can access property using object i.e object.property -->
-    <!-- <=listing[0].description > -->
-</ul>
+          <div class="tax-switch ms-auto">
+        <div class="form-check-reverse form-switch">
+              <input class="form-check-input mt-2" type="checkbox" role="switch" id="switchCheckDefault">
+               <label class="form-check-label" for="switchCheckDefault"><b>See Offers</b></label>
+             </div>
+      </div>     
+   </div>
+     <div class="tax-bar">
+           
+       </div>   
+
+    <div class="row  row-cols-lg-3 mt-3 row-cols-md- row-cols-sm-1">
+     <% for (let listingg of alllisting) { %>
+        <a href="/listings/<%=listingg._id%>" class="listing-link">
+ 
+            <div class="card listing-card" >
+  <img src="<%=listingg.image.url%>" class="card-img-top" alt="listing_cardimage"  style="height:20rem;">   
+   <div class="card-image-overlay">    </div>
+  <div class="card-body">
+    <h5 class="card-title"><b><%=listingg.title%></b></h5>
+    <p>&#8377;<%= typeof listingg.price === "number" ? listingg.price.toLocaleString("en-IN") : listingg.price %>/Night 
+        <% if(listingg.price>5000){ %><b> <i class="tax-info">&nbsp; &nbsp; +50% Off</i></b>
+         <% }else if(listingg.price>1000 && listingg.price<4999){ %><b> <i class="tax-info">&nbsp; &nbsp; +18% Off</i></b><% } %></p>     
+  
+</div> 
+</div>   
+</a>         
+      <% } %> </div>          
    
+<script>
+    let taxbutton=document.getElementById("switchCheckDefault");
+    taxbutton.addEventListener("click",()=>{
+       let taxinfo=document.getElementsByClassName("tax-info");
+       console.log(taxinfo);
+       //so on click pr dene ke liye hm loop lagayenge 
+       for(info of taxinfo){
+        if(info.style.display !="inline"){
+            info.style.display="inline";
+        }else{
+         info.style.display="none";
+    
+        }
+       }
+    })
+</script>
 </body>
-<!-- </html> -->
