--- a/views/listings/newlisting.ejs
+++ b/views/listings/newlisting.ejs
@@ -1,25 +1,85 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create new list</title>
-</head>
+<% layout ("/layouts/boilerplate") %>
+
 <body>
-   <form method="post"  action="/listings/updatelist">
-    <input name="listing[title]" type="name" placeholder="Enter your title">
-    <br>
-    <textarea name="listing[descriptin]" placeholder="Enter description"></textarea>
-      <input name="listing[image]" type="name" placeholder="Enter image url/link">
-    <br>
-      <input name="listing[price]" type="number" placeholder="Enter price">
-      <!-- yaha ek error aya tha ki maine listing[price] ki jagah listing[number] likh diya so tha wo proice ki value db mein enter hi nhi kr pa rha tha take 1 hr  -->
-    <br>
-      <input name="listing[location]" placeholder="Enter your location">
-    <br>
-      <input name="listing[country]" placeholder="Enter your Country">
-    <br>
-    <button type="submit">Create</button>
-   </form>
+ <div class="main-content">
+  <h3>Create new list</h3>
+   <div class="row">
+     <div class="col-8 offset-2">
+        <form method="post" action="/listings/updatelist"  novalidate class="needs-validation" enctype="multipart/form-data">
+
+<!-- /updatelist -->
+      <div class="mb-3">
+       <label for="title" class="form-label">Title</label> 
+       <input name="listing[title]" type="name" placeholder="Enter your title" class="form-control" required>
+           <div class="valid-feedback"> Title looks good!</div>
+           <div class="invalid-feedback">please enter valid Title </div>
+
+      </div>
+   
+      <div class="mb-3">
+            <label for="description" class="form-label">description</label>
+            <textarea name="listing[description]"  placeholder="Enter description" class="form-control" required ></textarea>
+            <div class="valid-feedback"> description looks good</div>
+          </div>
+          
+      <div class="mb-3">
+             <label for="image" class="form-label">Upload Image</label>
+
+           <input name="listing[image]" type="file" placeholder="Enter image url/link" class="form-control">
+      </div>
+
+      <div class="mb-3">
+             <label for="price" class="form-label">Price</label>
+                 <input name="listing[price]"  type="number" placeholder="Enter price" class="form-control" required>
+                   <div class="invalid-feedback"> Please select a valid price</div>
+
+      </div >
+      <div class="mb-3">
+    <label for="category" class="form-label">Category</label>
+    <select name="listing[category]" id="category" class="form-select" required>
+        <option selected disabled value="">Choose a category...</option>
+        <option value="Rooms">Rooms</option>
+        <option value="Amazing Views">Amazing Views</option>
+        <option value="Iconic cities">Iconic cities</option>
+        <option value="Surfing">Surfing</option>
+        <option value="Amazing Pools">Amazing Pools</option>
+        <option value="Beach">Beach</option>
+        <option value="Cabins">Cabins</option>
+        <option value="Lake front">Lake front</option>
+        <option value="Pool">Pool</option>
+
+    </select>
+    <div class="invalid-feedback">
+        Please select a valid category.
+    </div>
+</div>
+
+      <div class="mb-3">
+             <label for="location" class="form-label">Location</label>
+
+        
+            <input name="listing[location]"  placeholder="Enter your location" class="form-control" required>
+           
+                    <div class="invalid-feedback"> Please select a valid Location</div>
+      </div>
+
+      <div>
+             <label for="country" class="form-label">Country</label>
+                     <input name="listing[country]"  placeholder="Enter your Country" list="options" class="form-control" required>
+                      <div class="invalid-feedback"> Please select a valid Country</div>
+                     <datalist id="options">
+                      <option value="india"></option>
+                      <option value="united states"></option>
+                      <option value="united Kingdom"></option>
+                      <option value="russia"></option>
+                      <option value="austrelia"></option>
+                     </datalist>
+      </div> 
+         <br>
+          <button type="submit" class="btn btn-dark add-btn">Create</button>
+          </form>  
+
+      </div>
+    </div>     
+   </div>       
 </body>
-</html>
