Add Project Files

--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -3,14 +3,24 @@
 <footer >
     <div class="f-info mt-auto">
         <div class="f-info-social ">
-         <i class="fa-brands fa-x-twitter"></i>
-         <i class="fa-brands fa-instagram"></i>
-         <i class="fa-brands fa-linkedin"></i>
-         <i class="fa-brands fa-facebook"></i>
-         <i class="fa-solid fa-envelope"></i>
+             <a href="https://x.com/ud5583_vrushabh" class="filter-link"> <i class="fa-brands fa-x-twitter"></i></a>
+        
+             <a href="https://www.instagram.com/vrushabh_jain1103?igsh=MXEwZ3R6amp1a3l3NQ==" class="filter-link"> <i class="fa-brands fa-instagram"></i></a>
+           
+        
+             <a href="https://www.linkedin.com/in/vrushabh-udepurkar-054559251" class="filter-link">  <i class="fa-brands fa-linkedin"></i></a>
+       
+             <a href="https://github.com/Vrushabh100" class="filter-link"> <i class="fa-brands fa-github-alt"></i></a>
+        
+             <a href="https://www.youtube.com/@VrushabhUdepurkar" class="filter-link"><i class="fa-brands fa-youtube"></i></a>
+         
+             <a href="mailto:vrushabhudepurkar20@gmail.com" class="filter-link"> <i class="fa-solid fa-envelope"></i></a>
+
+       
+          
          
     </div>
-    <div class=".f-info-brand">&copy; Wonderlust Private Limited</div>
+    <div class=".f-info-brand">&copy; Raj_Darbar Private Limited</div>
     <div class="f-info-links">
         <a href="/privacy">Privacy</a>
         <a href="/terms">Terms</a>
