--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,7 +1,9 @@
 <nav class="navbar navbar-expand-lg bg-body-light border bottom sticky-top">
     <!-- sticky-top ek bootstrap ki class hai jo scroll ke saath navbar ko hilne nhi deti nav bar waho stick rehta hai jb hm scroll krte hai to -->
   <div class="container-fluid">
-    <a class="navbar-brand" href="/"><i class="fa-solid fa-compass"></i></a>
+    <a href="/icon.png">
+     <img src="/css/icon.png" alt="Rajdarbar" class="round-logo"></a>
+    <!-- <a class="navbar-brand" href="/"><img src="/icon.png" alt=""><i class="fa-solid fa-compass"></i></a> -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -44,6 +46,20 @@
              display: inline;
              margin-right: 0.5rem;
     }
+    .round-logo {
+    /* Define the size (must be equal for a perfect circle) */
+    width: 50px; 
+    height: 50px;
+
+    /* The magic line to make it round */
+    border-radius: 50%; 
+
+    /* Ensures the image covers the space without distortion */
+    object-fit: cover; 
+    
+    /* Optional: Add a subtle royal border */
+    border: 0.3px solid #FFD700; /* Gold color */
+}
     .search-inp{
          border-radius: 25px;
           opacity: 0.5;  
