--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Statue code </title>
+    <title>Raj Darbar-Premium Hotel Booking</title>
+    <link rel="icon" type="image/png" href="/css/icon.png">
     <link rel="stylesheet" href="/css/style.css"> 
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
@@ -13,6 +15,7 @@
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 </head>
 <body>
+
    <%- include("../includes/navbar.ejs")%>
         <main class="flex-grow-1">
           <div class="container">
@@ -25,6 +28,11 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="/jsscript/bostrplogc.js"></script>
+
+
+<!-- ElevenLabs Convai Agent Widget -->
+<elevenlabs-convai agent-id="agent_0301k389bgccfeqbt1ehfsgf2erb"></elevenlabs-convai>
+<script src="https://unpkg.com/@elevenlabs/convai-widget-embed" async type="text/javascript"></script>
 
         </body>
 </html>
